# matrix-fx-bot

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  compose.yml
.cargo/: config.toml
src/: bsky.rs  main.rs  misskey.rs  opengraph.rs  pixiv.rs  twitter.rs  types.rs  verification.rs
