[package]
name = "matrix-fx-bot"
author = "rtldg <rtldg@protonmail.com>"
repository = "https://github.com/rtldg/matrix-fx-bot"
version = "0.9.9"
edition = "2024"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.5.57", features = ["cargo", "derive", "unicode"] }
matrix-sdk = { version = "0.16.0", default-features = false, features = ["e2e-encryption", "bundled-sqlite", "rustls-tls"] }
mimalloc = { version = "*", features = ["secure"] }
reqwest = { version = "*", features = ["gzip", "json", "http2"] }
rusqlite = "*"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
tokio = { version = "1", features = ["full"] }
